<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="?colorOnPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/versionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/font_large"
            tools:text="1.0.0" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/white"
        android:orientation="vertical"
        app:divider="?android:attr/listDivider"
        app:showDividers="middle">

        <cn.danliren.apps.tangshi.widget.ItemView
            android:id="@+id/aboutDesigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subtitle="@string/label_designer_name"
            app:tailing="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:title="@string/label_designer" />

        <cn.danliren.apps.tangshi.widget.ItemView
            android:id="@+id/aboutDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subtitle="@string/label_developer_name"
            app:tailing="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:title="@string/label_developer" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal">

        <TextView
            android:id="@+id/text_about_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_about_introduce"
            android:textSize="@dimen/font_large" />
    </ScrollView>

</LinearLayout>