<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@mipmap/bg_green_hills" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:orientation="vertical"
        app:divider="@drawable/bg_divider"
        app:showDividers="middle">

        <LinearLayout
            android:id="@id/linear_setting_software"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_update" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/ItemTextStyle"
                android:text="@string/label_software_update"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linear_setting_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_trash" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/ItemTextStyle"
                android:text="@string/label_clean_cache"
                android:textAppearance="?attr/textAppearanceListItem" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@id/text_setting_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />


        </LinearLayout>

        <LinearLayout
            android:id="@id/linear_setting_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_alarmclock" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/ItemTextStyle"
                android:text="@string/label_history_record"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linear_setting_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_star_brown" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/ItemTextStyle"
                android:text="@string/label_my_collection"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linear_setting_feed_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_feed_back" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/ItemTextStyle"
                android:text="@string/label_feed_back"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linear_setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_about" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/ItemTextStyle"
                android:text="@string/label_about"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</FrameLayout>
